fixes distorted scaling

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@ h3, h4 {
 
 span {
   display: inline-block;
-  margin-right: 2vw;
+  margin: 0 2vw 0 1vw;
 }
 
 #frame-confirm {
